2011-03-25  Minh Dao Tran  <dao@kr.tuwien.ac.at>



	* include/network/Makefile.am: Add HandlerThread.h
	* include/network/HandlerThread.h: New file. (Interesting
	technique: forward declaration of templates)

	* include/network/Handler.h: Let the thread starts at
	HandlerThread.
	* include/network/Handler.tcc: Likewise.
	* include/network/Server.h: Likewise.
	* src/network/Server.cpp: Likewise.

	* src/network/OutputThread.cpp: Read and ignore the first k1
	models, and then read and store the next until k2.

	* include/dmcs/OutputNotification.h: Replace pack_size by k1, k2.
	* include/network/Handler.h: Likewise.
	* include/network/Handler.tcc: Likewise.

	* include/dmcs/ModelSessionId.h: Add path.
	* include/network/ConcurrentMessageDispatcher.h: Likewise.
	* include/network/ConcurrentMessageQueueFactory.h: Likewise.
	* include/network/JoinThread.h: Likewise.
	* include/network/MessagingGateway.h: Likewise.
	* include/network/NeighborThread.h: Likewise.
	* include/network/OutputThread.h: Likewise.
	* src/network/ConcurrentMessageDispatcher.cpp: Likewise.
	* include/solver/RelSatSolver.h: Likewise.
	* src/network/ConcurrentMessageQueueFactory.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.

	* include/dmcs/BaseTypes.h: Use PathList to simplify definition of path.

2011-03-24  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/JoinThread.h: Set up connection from JoinThread
	to RelSatSolver.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/network/Server.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* include/solver/SatSolverFactory.h: Likewise.
	* include/solver/RelSatSolver.h: Likewise.
	* include/network/ThreadFactory.h: Likewise.
	* include/network/Server.h: Likewise.

	* src/network/StreamingDMCSThread.cpp: Remove port.

	* include/network/JoinThread.h: Implement single-path join.